# mdiff

./: .gitignore  .mdiff.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  release-plz.toml  test_complexity.rs
.github/: journal.md
.github/specs/: 001-hunk-navigation.md  002-annotation-categories.md  003-quick-reactions.md  004-feedback-summary.md  005-which-key.md  006-review-checklist.md  007-complexity-indicators.md  008-mouse-support.md  009-fix-diff-line-calculations.md  010-which-key-flash-fix.md  010-word-level-diff.md  011-approve-reject-workflow.md  011-structured-feedback-export.md  012-agent-session-kill-fix.md
.github/workflows/: ci.yml  release-plz.yml  release.yml
src/: action.rs  agent_runner.rs  app.rs  cli.rs  complexity.rs  config.rs  context.rs  display_map.rs  event.rs  export.rs  intra_diff.rs  main.rs  pty_runner.rs  session.rs  template.rs  theme.rs  tui.rs
src/async_diff/: channel.rs  mod.rs  worker.rs
src/components/: action_hud.rs  agent_outputs.rs  agent_selector.rs  annotation_menu.rs  category_picker.rs  checklist_panel.rs  comment_editor.rs  commit_dialog.rs  context_bar.rs  diff_view.rs  feedback_summary.rs  global_search_bar.rs  mod.rs  navigator.rs  prompt_preview.rs  restore_confirm.rs  settings_modal.rs  target_dialog.rs  text_input.rs  which_key.rs  worktree_browser.rs
src/git/: commands.rs  diff.rs  mod.rs  repository.rs  types.rs  worktree.rs
src/highlight/: engine.rs  languages.rs  mod.rs  theme.rs
src/state/: agent_state.rs  annotation_state.rs  app_state.rs  checklist_state.rs  diff_state.rs  mod.rs  navigator_state.rs  review_state.rs  search_state.rs  selection_state.rs  (+3 more)
