[package]
name = "mutiny-diff"
version = "0.1.1"
edition = "2021"
description = "TUI git diff viewer with worktree management"
license = "MIT"
repository = "https://github.com/mutinyhq/mdiff"
homepage = "https://github.com/mutinyhq/mdiff"
keywords = ["git", "diff", "tui", "terminal", "worktree"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mdiff"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/mdiff-{ target }.tar.gz"
bin-dir = "mdiff-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Git
git2 = { version = "0.19", features = ["vendored-openssl"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
color-eyre = "0.6"

# Syntax highlighting
tree-sitter = "0.24"
tree-sitter-highlight = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-css = "0.23"
tree-sitter-html = "0.23"
tree-sitter-go = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-yaml = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# Config
toml = "0.8"

# Clipboard
arboard = "3"

# Fuzzy search (for Phase 5)
nucleo = "0.5"
